<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

        <TextView
                android:id="@+id/info_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        <ImageView
                android:id="@+id/info_app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="logo"
                android:src="@drawable/ic_launcher" />

        <TextView
                android:id="@+id/info_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="italic" />

        <TextView
                android:id="@+id/info_app_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_author"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/info_app_author_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_author_email"
                android:textStyle="bold" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/app_libs_array_header"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/info_app_libs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="4dp"
                android:lineSpacingMultiplier="1.4" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/app_licenses_array_header"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/info_app_licenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="4dp"
                android:lineSpacingMultiplier="1.4" />
    </LinearLayout>

</ScrollView>